--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,29 +1,33 @@
+### enable tmux → terminal OSC52 clipboard output
+set -g set-clipboard on
+
+### general UI behavior
 set -g mouse on
-unbind -n MouseDown3Pane
-unbind -n MouseDown2Pane
-set-option -g renumber-windows on
-# Drag windows on the status bar
-bind-key -n MouseDrag1Status swap-window -d -t=
-
-# Reduce flicker for full-screen TUIs
 set -g escape-time 0
-set -g status-interval 5
-#set -g render-delay 10
 set-option -sg repeat-time 0
-
-# Allow apps to use full 24-bit color without redraw glitches
-set -as terminal-overrides ',*:Tc'
-set -s copy-command 'wl-copy'
-
-
 setw -g mode-keys vi
 
-# clipboard bindings (work on both local + remote with OSC52)
+### vi-mode keybindings
 bind -T copy-mode-vi Space send -X begin-selection
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "tmux-osc52"
 bind -T copy-mode-vi r send -X rectangle-toggle
+bind -T copy-mode-vi Enter send -X copy-selection-and-cancel
 
-# optional: detect if wl-copy is available (local KDE/Wayland only)
-if-shell "command -v wl-copy >/dev/null 2>&1" \
-  "bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'wl-copy'"
+### general UI behavior
+set -g mouse on
+set -g escape-time 0
+set-option -sg repeat-time 0
+setw -g mode-keys vi
+
+### vi-mode keybindings
+bind -T copy-mode-vi Space send -X begin-selection
+bind -T copy-mode-vi r send -X rectangle-toggle
+bind -T copy-mode-vi Enter send -X copy-selection-and-cancel
+
+### mouse bindings
+# left-click drag to start a selection in copy-mode
+unbind -n MouseDragEnd1Pane
+bind -n MouseDragEnd1Pane if -F "#{pane_in_mode}" \
+  "send -X copy-selection-and-cancel" \
+  "copy-selection-and-cancel"
+
 
